--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-*.a
-*.o
 /build
-CMakeCache.txt
-CMakeFiles
-Makefile
-cmake_install.cmake
-CTestTestfile.cmake
-compile_commands.json
+/.ccls-cache
